[package]
name = "nano-tests"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1  # better optimizations
debug = true       # symbols are nice and they don't increase the size on Flash
lto = true         # better optimizations

[features]
nice-panic = []
usb-io = ["usbd-serial", "usb-device", "arduino_nano33iot/usb"]
usb-logger = ["usb-io"]
default = ["usb-logger", "nice-panic"]

[dependencies]
panic-halt = "0.2.0"
cortex-m = "0.7"
modular-bitfield = "0.11.2"

[dependencies.arduino_nano33iot]
version = "0.7.0"
features = ["unproven"]

[dependencies.usbd-serial]
version = "0.1"
optional = true

[dependencies.usb-device]
version = "0.2"
optional = true